Fixed truncating text problem on Article component, rearranged meta tags and added fb id meta tag

--- a/src/components/ArticleBlock/ArticleBlock.less
+++ b/src/components/ArticleBlock/ArticleBlock.less
@@ -1,7 +1,7 @@
 @import "../../shared/mixins.less";
 @import "../../shared/vars.less";
 
-@articleBottomPadding: @small;
+@articleBottomPadding: @xsmall;
 @verticalArticleMarginBottom: @xsmall;
 
 .ArticleBlock {
@@ -95,17 +95,16 @@
     .details {
       padding-left: @xsmall;
       padding-right: @xsmall;
+      line-height: 1em;
 
       .title {
-        .word-break();
-        .truncate(@fontSize: 13*@pixel, @linesToShow: 3, @lineHeight: 1em);
         font-weight: bold;
       }
 
       .excerpt {
-        .truncate(@fontSize: 12*@pixel, @linesToShow: 4, @lineHeight: 1.2em);
-        .word-break();
+        height: 4em;
         font-size: 12px;
+        overflow: hidden;
       }
     }
   }
